LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan__c/Account_Plan__c.object-meta.xml
<CustomObject>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>