LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan__c/fields/Account_Overview__c.field-meta.xml
<CustomField>
    <fullName>Account_Overview__c</fullName>
    <label>Account Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>