LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan__c/fields/Client_Business_Goals__c.field-meta.xml
<CustomField>
    <fullName>Client_Business_Goals__c</fullName>
    <label>Client Business Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>