LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan__c/fields/Client_Strategic_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Client_Strategic_Challenge__c</fullName>
    <label>Client Strategic Challenge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>