LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan__c/fields/RAP_Relationship_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>RAP_Relationship_Action_Plan__c</fullName>
    <label>RAP (Relationship Action Plan)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>