LinKreta_POC_Repository/force-app/main/default/objects/Account_Plan__c/fields/Total_Potential_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Potential_Fee__c</fullName>
    <description>(Rolled up from open + other opportunities</description>
    <label>Target</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>